--- a/css/styles.css
+++ b/css/styles.css
@@ -580,7 +580,24 @@
 .footer-link:focus{
      background-color:var(--accent-color);
 }
+.form{
+    margin-left: 93px;
+}
+
+.submit-btn{
+    width: 200px;
+    height: 50px;
+    padding: 10px 62px 10px 29px;
+    background-color: var(--accent-color);
+    color:var(--primary-white-color);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.88;
+}
+.submit-btn::after{
+    content: ;
     
+}
 /* Портофолио */
 
 .projects-section{
