--- a/css/styles.css
+++ b/css/styles.css
@@ -537,23 +537,7 @@
 .footer-contacts:focus{
     text-decoration: underline;
 }
-.join-part{
-    display: flex;
-    flex-direction:column ;
-    margin-left: 70px;
-}
 
-.title-join{
-    display: block;
-    margin-bottom: 4px; 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color:var(--primary-white-color);
-
-}
 .net-name-footer{
     display: flex;
     align-items:center;
@@ -583,12 +567,42 @@
 .subscribe-form{
     margin-left: 93px;
 }
+.join-part{
+    display: flex;
+    flex-direction:column ;
+    margin-left: 70px;
+}
 
+.title-join{
+    display: block;
+    margin-bottom: 20px; 
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color:var(--primary-white-color);
+
+}
+.subscribe-field{
+    display: flex;
+    align-items: baseline;
+}
+.footer-input{
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    padding: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color:transparent;
+    border-radius:4px;
+    
+}
 .subscribe-btn{
-    /* position: relative; */
+    position: relative;
     width: 200px;
     height: 50px;
-    padding: 10px 62px 10px 29px;
+    padding: 10px 28px;
     background-color: var(--accent-color);
     color:var(--primary-white-color);
     font-size: 16px;
@@ -596,13 +610,16 @@
     line-height: 1.88;
     border-radius:4px;
 }
+.sign{
+    padding-left: 10px;
+    
+}
 .subscribe-icon{
-    /* position: absolute;
-    top:50%;
-    right:50%;
-    display: block;
-    fill:red; */
-   
+  position: absolute;
+  top: 13px;
+  left: 148px;
+  margin-left: 10px;
+  /* top: 148px 13px; */
 }
     
 /* Портофолио */
@@ -841,5 +858,17 @@
 .form-label{
     margin-bottom: 4px;
     font-size: 12px;
+
+}
+.form-comment{
+    width: 448px;
+    height: 120px;
+    resize: none;
+    padding: 16px 12px;
+    color:
+    rgba(117, 117, 117, 0.5);
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    
 
 }
