--- a/css/styles.css
+++ b/css/styles.css
@@ -855,6 +855,11 @@
     border-radius: 4px;
 
 }
+.form-input:focus{
+    border: 1px solid var(--accent-color);
+    fill:var(--accent-color);
+   
+}
 .form-label{
     margin-bottom: 4px;
     font-size: 12px;
