--- a/css/styles.css
+++ b/css/styles.css
@@ -610,16 +610,13 @@
     line-height: 1.88;
     border-radius:4px;
 }
-.sign{
-    padding-left: 10px;
-    
-}
+
 .subscribe-icon{
   position: absolute;
   top: 13px;
   left: 148px;
   margin-left: 10px;
-  /* top: 148px 13px; */
+ 
 }
     
 /* Портофолио */
@@ -839,6 +836,7 @@
 
 }
 .form-field{
+    position: relative;
     display: block;
     display: flex;
     flex-direction: column;
@@ -847,18 +845,32 @@
 
 }
 .form-input{
-    width: 448px;
+    /* position: relative; */
+    width: 100%;
     height: 40px;
     margin: 0;
-    padding: 12px 15px;
+    padding-left: 42px;
+    outline: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+.form-field:hover .form-icon,
+.form-field:focus .form-icon{
+    fill:var(--accent-color);
+}
+
+.form-input:hover,
 .form-input:focus{
     border: 1px solid var(--accent-color);
-    fill:var(--accent-color);
-   
+}
+.form-icon{
+    position: absolute;
+    top: 30px;
+    left:12px;
+
 }
 .form-label{
     margin-bottom: 4px;
@@ -870,6 +882,7 @@
     height: 120px;
     resize: none;
     padding: 16px 12px;
+    outline: none;
     color:
     rgba(117, 117, 117, 0.5);
     border: 1px solid rgba(33, 33, 33, 0.2);
