--- a/css/styles.css
+++ b/css/styles.css
@@ -584,19 +584,27 @@
     color:var(--primary-white-color);
 
 }
+
+    
 .subscribe-field{
     display: flex;
     align-items: baseline;
 }
 .footer-input{
+    display: block;
     width: 358px;
     height: 50px;
     margin-right: 12px;
     padding: 15px;
+    color: var(--primary-white-color);
+    
     border: 1px solid rgba(255, 255, 255, 0.3);
     background-color:transparent;
     border-radius:4px;
     
+}
+.footer-input.focus{
+    color:var(--primary-white-color);
 }
 .subscribe-btn{
     position: relative;
@@ -802,6 +810,7 @@
     background-color:var(--primary-white-color);
     border:1px solid rgba(0, 0, 0, 0.1);
     border-radius:50%;
+    
 
 }
 .modal-btn-icon{
@@ -823,6 +832,9 @@
     padding: 40px 39px 40px 41px;
     
 }
+/* .form.is-open .modal-btn{
+    pointer-events: none;
+} */
 .form-title{
     margin-bottom: 12px;
     font-weight: 700;
@@ -832,8 +844,6 @@
     letter-spacing: 0.03em;
 
     color: #212121;
-
-
 }
 .form-field{
     position: relative;
@@ -845,7 +855,6 @@
 
 }
 .form-input{
-    /* position: relative; */
     width: 100%;
     height: 40px;
     margin: 0;
