--- a/css/styles.css
+++ b/css/styles.css
@@ -798,6 +798,7 @@
     position: absolute;
     top: 8px;
     right: 8px;
+    z-index: 9;
 
     display: flex;
     justify-content: center;
@@ -832,9 +833,7 @@
     padding: 40px 39px 40px 41px;
     
 }
-/* .form.is-open .modal-btn{
-    pointer-events: none;
-} */
+
 .form-title{
     margin-bottom: 12px;
     font-weight: 700;
@@ -909,8 +908,14 @@
 .checkbox{
     appearance: none;
     position: absolute;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+.checkbox:hover + .icon,
+.checkbox:focus + .icon{
+    border-color: var(--accent-color);
+}
+
 .icon{
     display: block;
     width: 16px;
@@ -925,6 +930,7 @@
     background-size:contain;
     background-origin:content-box;
     background-color: var(--accent-color);
+    border:var(--accent-color);
 }
 .agree{
     color:var(--accent-color);
