--- a/css/styles.css
+++ b/css/styles.css
@@ -726,9 +726,9 @@
     line-height: 1.56;
 
 }
-.examples-picture{
+/* .examples-picture{
     position: relative;
-    overflow: hidden;
+    overflow: hidden; */
 }
 .project-content{
     border:1px solid #eeeeee;
