--- a/css/styles.css
+++ b/css/styles.css
@@ -819,10 +819,14 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 
 }
-.modal-btn-icon:hover,
-.modal-btn-icon:focus{
-    fill:var(--accent-color);}
-    
+   
+.modal-btn:hover .modal-btn-icon,
+.modal-btn:focus .modal-btn-icon{
+    fill:var(--accent-color);
+   
+}
+
+
 .form{
     position: absolute;
     top:0;
